# cng-vector-formats

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 01_completed.ipynb  01_is-geojson-cloud-native.ipynb  02_completed.ipynb  02_the-well-knowns.ipynb  03_completed.ipynb  03_reading-parquet-the-hard-way.ipynb  1_completed.ipynb  2_completed.ipynb
notes/: 01_is-geojson-cloud-native.md  02_the-well-knowns.md
