[project]
name = "cng-vector-formats"
version = "0.1.0"
description = "Exploring Cloud-Native Geospatial Formats: A Hands-on Workshop for Vector Data"
readme = "README.md"
authors = [
    { name = "Jarrett Keifer", email = "jkeifer0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "devtools>=0.12.2",
    "folium>=0.20.0",
    "jupyterlab>=4.4.6",
    "por-que>=0.2.3",
    "pyarrow>=21.0.0",
    "s3fs>=2025.7.0",
    "shapely>=2.1.1",
]

[project.urls]
Repository = 'https://github.com/jkeifer/cng-vector-formats'

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipynb-scrubber>=0.4.1",
]

[tool.ipynb-scrubber.options]
clear-text = ""

[[tool.ipynb-scrubber.files]]
input = "notebooks/01_completed.ipynb"
output = "notebooks/01_is-geojson-cloud-native.ipynb"
notes-file = "notes/01_is-geojson-cloud-native.md"

[[tool.ipynb-scrubber.files]]
input = "notebooks/02_completed.ipynb"
output = "notebooks/02_the-well-knowns.ipynb"
notes-file = "notes/02_the-well-knowns.md"

[[tool.ipynb-scrubber.files]]
input = "notebooks/03_completed.ipynb"
output = "notebooks/03_reading-parquet-the-hard-way.ipynb"
notes-file = "notes/03_reading-parquet-the-hard-way.md"
